# wtfm

./: .gitignore  .wtfm.json  CNAME  Cargo.toml  README.md  _config.yml  index.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  licenses.rs  main.rs
src/cli/: args.rs
src/commands/: analyze.rs  author.rs  edit.rs  generate.rs  info.rs  mod.rs
src/config/: mod.rs  wizard.rs  wtfm.rs
src/utils/: helpers.rs  logger.rs  messages.rs  mod.rs  template.rs
src/utils/cargo/: cargo.rs  mod.rs  parser.rs
src/utils/git/: git.rs  mod.rs  parser.rs  types.rs
src/wizard/: menu.rs  mod.rs
src/wizard/sections/: authors.rs  cicd.rs  features.rs  install.rs  license.rs  mod.rs  project.rs
templates/: authors.tera  continuous_integration.tera  contributors.tera  features.tera  getting_started.tera  header.tera  license.tera  readme.tera
tests/: main.rs  mod.rs
tests/integration/: mod.rs  template_test.rs
tests/interactive/: mod.rs  wizard_test.rs
tests/manual/: mod.rs  wizard_debug.rs
