[package]
name = "wtfm"
version = "0.1.0"
description = "This CLI tool will guide you in writing that (F) Manual."
edition = "2021"
authors = ["MiPnamic Von Wirklichkeit <mipnamic@mipnamic.net>"]

[dependencies]
clap = { version = "4.5.24", features = ["derive", "unicode"] }
dialoguer = "0.11.0"
semver = "1.0.24"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "3.15.0"
tera = "1.20.0"
